Manifest/service-backstage.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage-manual
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
