Manifest/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: backstage-manual
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
